css file updated

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="assets/logo.PNG" alt="" width="80" height="50" class="d-inline-block align-text-center">
-                ByOnline
+               <b> BuyOnline</b>
             </a>
             <!-- </div> -->
             <div class="collapse navbar-collapse justify-content-center align-text-center" id="navbarNavDropdown">
-                <ul class="navbar-nav justify-content-center">
+                <ul class="navbar-nav justify-content-center li">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#"> <b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#"><b>Features</b></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
@@ -52,7 +52,7 @@
         </div>
 
         <div id="maindiv-1">
-            <div id="carouselExampleSlidesOnly" class="carousel slide mt-5 mb-5" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly" class="carousel slide mt-3 mb-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="assets/sl1.jpeg" class="d-block w-100 " alt="...">
